// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard selectors should return Dashboard 1`] = `
Object {
  "activeTab": "uploads",
  "generating": Object {
    "completed": 25,
    "logs": Array [
      "some-logs...",
    ],
  },
  "pollingProcessID": 1,
  "uploading": Object {
    "completed": 25,
    "logs": Array [
      "some-logs...",
    ],
  },
}
`;

exports[`Dashboard selectors should return Dashboard activeTab 1`] = `"uploads"`;

exports[`Dashboard selectors should return Dashboard generating 1`] = `
Object {
  "completed": 25,
  "logs": Array [
    "some-logs...",
  ],
}
`;

exports[`Dashboard selectors should return Dashboard pollingProcessID 1`] = `1`;

exports[`Dashboard selectors should return Dashboard uploading 1`] = `
Object {
  "completed": 25,
  "logs": Array [
    "some-logs...",
  ],
}
`;
